--- a/index.html
+++ b/index.html
@@ -130,12 +130,87 @@
         <div class="rightimg">
             <img src="https://codeofschool.com/img/about_3.jpg">
         </div>
+      </section>
+    </section>
 
-     </section>
-     <div>
-      <div>
+  </section>
+</section>
 
-      </div>
-     </div>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="https://codeofschool.com/img/cos-white-logo.webp" alt="Code of School Logo">
+            <p>Code of School by Inforag Technology empowers future tech innovators through hands-on training in coding, data science, AI, and full-stack development. Our practical, industry-driven curriculum ensures students gain job-ready skills and real-world project experience.</p>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/codeofschool/" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384063.png" alt="Instagram" class="social-icon-img instagram-icon">
+                </a>
+                <a href="https://www.linkedin.com/company/code-of-school/" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png" alt="LinkedIn" class="social-icon-img linkedin-icon">
+                </a>
+                <a href="https://www.facebook.com/codeofschool/" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384053.png" alt="Facebook" class="social-icon-img facebook-icon">
+                </a>
+                <a href="https://twitter.com/codeofschool" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384065.png" alt="Twitter" class="social-icon-img twitter-icon">
+                </a>
+            </div>
+        </div>
+
+        <div class="footer-links">
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Legal & Info</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>Courses Offered</h3>
+                <ul>
+                    <li><a href="#">Digital Marketing with AI</a></li>
+                    <li><a href="#">Full Stack Development</a></li>
+                    <li><a href="#">MERN Stack Development</a></li>
+                    <li><a href="#">Frontend Development</a></li>
+                    <li><a href="#">Mobile App Development</a></li>
+                    <li><a href="#">Data Science</a></li>
+                    <li><a href="#">Data Analysis</a></li>
+                    <li><a href="#">UI/UX Design</a></li>
+                    <li><a href="#">Python</a></li>
+                    <li><a href="#">C & C++</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <ul class="contact-info">
+                    <li>
+                        <img src="https://cdn-icons-png.flaticon.com/128/484/484167.png" alt="Location" class="contact-icon-img">
+                        Office No. 421 Fourth Floor, Shagun Tower, Rasoma Square, Vijay Nagar, Ratna Lok Colony, Indore, Madhya Pradesh 452010
+                    </li>
+                    <li>
+                        <img src="https://cdn-icons-png.flaticon.com/128/455/455705.png" alt="Phone" class="contact-icon-img">
+                        ‪+91 99777-23-584‬<br>‪+91 9165-234-695‬<br>‪+91 99777-97-076‬
+                    </li>
+                    <li>
+                        <img src="https://cdn-icons-png.flaticon.com/128/542/542638.png" alt="Email" class="contact-icon-img">
+                        thecodeofschool@gmail.com
+                    </li>
+                    <li>
+                        <img src="https://cdn-icons-png.flaticon.com/128/2784/2784459.png" alt="Clock" class="contact-icon-img">
+                        Mon-Fri : 10:00 19:00<br>Sat: 12:00 18:00<br>Sunday : Closed
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+    
 </body>
 </html>
