--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="image.png" alt="Codes of School Logo">
+                <div class="logo-container">
+                    <img src="https://codeofschool.com/img/cos-white-logo.webp" alt="Codes of School Logo" class="logo-img">
+                    <div class="logo-text">
+                        <span class="logo-title">Codes of School</span>
+                        <span class="logo-subtitle">Best IT Training</span>
+                    </div>
+                </div>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
