--- a/Contact.html
+++ b/Contact.html
@@ -25,29 +25,48 @@
             <a href="#" class="book-demo">Book Demo</a>
         </nav>
         <main class="contact-container">
-                <div class="contact-header">
-                    <h1 class="contact-title">Contact Us</h1>
-                   </div>
-                <div class="contact-content">
+                <div class="light-beam"></div>
+                <div class="contact-part-one">
+                    <div class="contact-header">
+                        <h1 class="contact-title">Contact Us</h1>
+                    </div>
+                    <div class="contact-content">
                     <div class="contact-info">
                         <div class="contact-details">
                             <div class="contact-item">
                                 <div class="contact-text">
-                                    <h3>Phone:</h3>
-                                    <p>9977723584, 9165234695</p>
+                                    <p>Phone: 9977723584, 9165234695</p>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <div class="contact-text">
-                                    <h3>Email:</h3>
-                                    <p>thecodeofschool@gmail.com</p>
+                                    <p>Email: thecodeofschool@gmail.com</p>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <div class="contact-text">
-                                    <h3>Address:</h3>
-                                    <p>Office No. 421 Fourth Floor, Shagun Tower, Rasoma Square, Vijay Nagar, Ratna Lok Colony Indore, Madhya Pradesh 452010</p>
+                                    <p>Address: Office No. 421 Fourth Floor, Shagun Tower, Rasoma Square, Vijay Nagar, Ratna Lok Colony Indore, Madhya Pradesh 452010</p>
                                 </div>
+                            </div>
+                            <div class="contact-social">
+                                <a href="mailto:thecodeofschool@gmail.com" class="contact-social-icon">
+                                    <img src="https://cdn-icons-png.flaticon.com/128/542/542638.png" alt="Email">
+                                </a>
+                                <a href="https://wa.me/919977723584" target="_blank" class="contact-social-icon">
+                                    <img src="https://cdn-icons-png.flaticon.com/128/3670/3670051.png" alt="WhatsApp">
+                                </a>
+                                <a href="https://www.linkedin.com/company/code-of-school/" target="_blank" class="contact-social-icon">
+                                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png" alt="LinkedIn">
+                                </a>
+                                <a href="https://www.instagram.com/codeofschool/" target="_blank" class="contact-social-icon">
+                                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384063.png" alt="Instagram">
+                                </a>
+                                <a href="https://www.facebook.com/codeofschool/" target="_blank" class="contact-social-icon">
+                                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384053.png" alt="Facebook">
+                                </a>
+                                <a href="https://twitter.com/codeofschool" target="_blank" class="contact-social-icon">
+                                    <img src="https://cdn-icons-png.flaticon.com/128/1384/1384065.png" alt="Twitter">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -93,27 +112,8 @@
                     </div>
                 </div>
             </div>
-        </main>
-        <div class="social-icons-section">
-            <a href="mailto:thecodeofschool@gmail.com" class="social-icon">
-                <img src="https://cdn-icons-png.flaticon.com/128/542/542638.png" alt="Email">
-            </a>
-            <a href="https://wa.me/919977723584" target="_blank" class="social-icon">
-                <img src="https://cdn-icons-png.flaticon.com/128/3670/3670051.png" alt="WhatsApp">
-            </a>
-            <a href="https://www.linkedin.com/company/code-of-school/" target="_blank" class="social-icon">
-                <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png" alt="LinkedIn">
-            </a>
-            <a href="https://www.instagram.com/codeofschool/" target="_blank" class="social-icon">
-                <img src="https://cdn-icons-png.flaticon.com/128/1384/1384063.png" alt="Instagram">
-            </a>
-            <a href="https://www.facebook.com/codeofschool/" target="_blank" class="social-icon">
-                <img src="https://cdn-icons-png.flaticon.com/128/1384/1384053.png" alt="Facebook">
-            </a>
-            <a href="https://twitter.com/codeofschool" target="_blank" class="social-icon">
-                <img src="https://cdn-icons-png.flaticon.com/128/1384/1384065.png" alt="Twitter">
-            </a>
         </div>
+        </main>
 
         <div class="map-section">
             <iframe 
