--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="About.css">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="ourplacemenet.css">
-    <link rel="stylesheet" href="contact.css"
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <div class="container">
@@ -15,10 +15,10 @@
         <nav class="navbar">
             <div class="logo">
                 <div class="logo-container">
-                    <img src="https://codeofschool.com/img/cos-white-logo.webp" alt="Codes of School Logo" class="logo-img">
-                    <div class="logo-text">
-                        <span class="logo-title">Codes of School</span>
-                        <span class="logo-subtitle">Best IT Training</span>
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="https://codeofschool.com/img/cos-white-logo.webp" alt="Code of School Logo" class="logo-img">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 </div>
             </div>
         </section>
-    <section class="team-section">
+    <section class="team-section about-faculty">
      <h2>Our Teams</h2>
      <div class="team">
        <div class="team-member">
@@ -117,7 +117,7 @@
     </div>
   </section>
      <!-- Why Choose Us -->
-  <section class="bullets">
+  <section class="bullets about-faculty">
     <h2>Why Choose Us?</h2>
     <ul>
       <li>Student-Centered – Your success shapes our teaching.</li>
@@ -128,7 +128,7 @@
   </section>
 
   <!-- Values Mission Vision Section -->
-  <section class="values-section">
+  <section class="values-section about-faculty">
     <div class="values-container">
       <div class="value-box">
         <h2>Our Values</h2>
